# backend

./: README.md  pyproject.toml
infra/: .env.example  docker-compose.local.yml  docker-compose.yml  nginx.conf
src/: Dockerfile  README.md  manage.py  pyproject.toml  telegram_main.py
src/chat/: admin.py  consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
src/chat/migrations/: 0001_initial.py  0002_contactinfo.py
src/config/: asgi.py  settings.py  urls.py
src/telegarm_bot/: YandexGPT.py  apps.py  constants.py  handlers.py  test_handlers.py
src/yandexgpt/: apps.py  constants.py  views.py
