[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Sherif Ragimov <ragimov700@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.11"
channels = {extras = ["daphne"], version = "^4.0.0"}
django-cors-headers = "^4.3.1"
djangorestframework = "^3.15.1"
flake8 = "^7.0.0"
isort = "^5.13.2"
httpx = "^0.27.0"
aiogram = "^3.4.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
